fix(mobile): Circle buttons on listview - wrong size in UI-Tests [OAPTAU-442]
- Changed size and poisition of circle buttons in order to match values provided in UX guide (listview.less)

--- a/tau/src/css/profile/mobile/changeable/common/button.less
+++ b/tau/src/css/profile/mobile/changeable/common/button.less
@@ -133,22 +133,31 @@ a.ui-btn {
 		.LESSui-btn-nobg();
 	}
 
-	&.ui-btn-circle,
-	&.ui-btn-nobg {
-		width: 78 * @unit_base;
-		height: 78 * @unit_base;
-		text-indent: -9999 * @unit_base;
-		padding: 20 * @unit_base 0;
-		border-radius: 50%;
+	&.ui-btn-icon {
+		&.ui-btn-circle {
+			width: 98 * @unit_base;
+			height: 98 * @unit_base;
 
-		&.ui-inline {
-			width: 78 * @unit_base;
+			&::after {
+				background-color: @color_button_icon;
+			}
 		}
 
-		&::after {
+		&.ui-btn-nobg {
 			width: 80 * @unit_base;
 			height: 80 * @unit_base;
-			background-color: @color_button_icon;
+			text-indent: -9999 * @unit_base;
+			padding: 20 * @unit_base 0;
+			border-radius: 50%;
+
+			&.ui-inline {
+				width: 80 * @unit_base;
+			}
+
+			&::after {
+				width: 80 * @unit_base;
+				height: 80 * @unit_base;
+			}
 		}
 	}
 
