--- a/tau/src/css/profile/mobile/changeable/common/listview.less
+++ b/tau/src/css/profile/mobile/changeable/common/listview.less
@@ -385,6 +385,14 @@
 				right: 120 * @unit_base;
 			}
 		}
+
+		.ui-btn-icon.ui-btn-nobg {
+			right: 17 * @unit_base;
+		}
+
+		.ui-btn-icon.ui-btn-circle {
+			right: 32 * @unit_base;
+		}
 	}
 
 	.li-has-radio.li-has-right-radio .ui-radio {
